Terumo Partdev/src/objects/Communication_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communication Preferences</relationshipLabel>
        <relationshipName>Communication_Preferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Preference__c</fullName>
        <label>Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Opt-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt-Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Spectra Optia Apheresis System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teruflux Blood Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trima Accel Automated Blood Collection System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Action</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Communication Preference</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Comm. Pref. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Preferred_Channel_Selection</fullName>
        <active>true</active>
        <errorConditionFormula>If(Preferred_Channel__c = TRUE, ISPICKVAL(Preference__c ,&quot;Opt-Out&quot;), False)</errorConditionFormula>
        <errorMessage>You cannot mark this as preferred channel if the contact has opted out of this communication channel</errorMessage>
    </validationRules>
</CustomObject>